# serializer version: 1
# name: test_all_entities[binary_sensor.yardian_smart_sprinkler_freeze_prevent-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.yardian_smart_sprinkler_freeze_prevent',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Freeze prevent',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Freeze prevent',
    'platform': 'yardian',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'freeze_prevent',
    'unique_id': 'yid123-freeze_prevent',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.yardian_smart_sprinkler_freeze_prevent-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Yardian Smart Sprinkler Freeze prevent',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.yardian_smart_sprinkler_freeze_prevent',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[binary_sensor.yardian_smart_sprinkler_standby-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.yardian_smart_sprinkler_standby',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Standby',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Standby',
    'platform': 'yardian',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'standby',
    'unique_id': 'yid123-standby',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.yardian_smart_sprinkler_standby-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Yardian Smart Sprinkler Standby',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.yardian_smart_sprinkler_standby',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[binary_sensor.yardian_smart_sprinkler_watering_running-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.yardian_smart_sprinkler_watering_running',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Watering running',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Watering running',
    'platform': 'yardian',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'watering_running',
    'unique_id': 'yid123-watering_running',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.yardian_smart_sprinkler_watering_running-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'Yardian Smart Sprinkler Watering running',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.yardian_smart_sprinkler_watering_running',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[binary_sensor.zone_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.zone_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'yardian',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'enabled',
    'unique_id': 'yid123-zone_enabled_0',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.zone_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Zone 1',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.zone_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[binary_sensor.zone_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.zone_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'yardian',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'enabled',
    'unique_id': 'yid123-zone_enabled_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.zone_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Zone 2',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.zone_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
